--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,6 +5,7 @@
     <string name="title_dashboard">Dashboard</string>
     <string name="title_notifications">Notifications</string>
     <string name="open_menu">Open menu</string>
+    <string name="search_by_camera">Search using the camera</string>
     <string name="drip_counter">Drip Counter</string>
     <string name="find_medicine">Find Medicine</string>
     <string name="options">Options</string>
@@ -16,6 +17,7 @@
 
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="back">Go back</string>
     <string name="dismiss">Dismiss</string>
     <string name="remind_me_later">Remind me later</string>
     <string name="message_out_of_medicine">You will run out of %s in %d days.\nDon\'t forget to go to the pharmacy.</string>
