--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -22,4 +22,5 @@
     <string name="remind_me_later">Remind me later</string>
     <string name="message_out_of_medicine">You will run out of %s in %d days.\nDon\'t forget to go to the pharmacy.</string>
     <string name="reminder">Reminder</string>
+    <string name="voice_search">Voice Search...</string>
 </resources>
