--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -14,10 +14,12 @@
     <string name="medicines">Medicines</string>
     <string name="appointments">Appointments</string>
     <string name="loading">Loading...</string>
+    <string name="new_doctor">Add new doctor</string>
 
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="back">Go back</string>
+    <string name="cancel">Cancel</string>
     <string name="dismiss">Dismiss</string>
     <string name="remind_me_later">Remind me later</string>
     <string name="message_out_of_medicine">You will run out of %s in %d days.\nDon\'t forget to go to the pharmacy.</string>
