--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -12,7 +12,7 @@
     <string name="about">About</string>
     <string name="calender">Calender</string>
     <string name="medicines">Medicines</string>
-    <string name="appointments">Appointments</string>
+    <string name="appointments">Doctors</string>
     <string name="loading">Loading...</string>
     <string name="new_doctor">Add new doctor</string>
 
